samples/_failures_safe/1761647679_f24fa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_744cdd06.c: In function ‘main’:
./samples/SAFE/__tmp_744cdd06.c:156: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_744cdd06.c:155:17: error: expected declaration or statement at end of input
  155 |                 if
      |                 ^~
./samples/SAFE/__tmp_744cdd06.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_744cdd06.c:155:17: error: expected declaration or statement at end of input
